# runtime-hal

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
bench-fw/coldpath/: .gitignore  Cargo.toml  memory.x
bench-fw/coldpath/.cargo/: config.toml
bench-fw/coldpath/src/: main.rs
bench-fw/detect/: .gitignore  Cargo.toml  memory.x
bench-fw/detect/src/: main.rs
bench-fw/faultpin/: .gitignore  Cargo.toml  memory.x
bench-fw/faultpin/src/: main.rs
bench-fw/fmc/: Cargo.toml  memory.x
bench-fw/fmc/src/: main.rs
bench-fw/motor-verify/: .gitignore  Cargo.toml  memory.x
bench-fw/motor-verify/src/: main.rs
bench-fw/probe/: Cargo.toml  memory.x
bench-fw/probe/.cargo/: config.toml
bench-fw/probe/src/: main.rs
bench-fw/serial/: .gitignore  Cargo.toml  build.rs  memory.x
bench-fw/serial/src/: main.rs
bench-fw/usart-rx/: Cargo.toml
bench-fw/usart-rx/.cargo/: config.toml
bench-fw/usart-rx/src/: main.rs
bench-fw/wfi-dbghold-repro/: Cargo.toml  memory.x
bench-fw/wfi-dbghold-repro/src/: main.rs
bench-fw/wfi-lock-repro/: Cargo.toml
bench-fw/wfi-lock-repro/.cargo/: config.toml
bench-fw/wfi-lock-repro/src/: main.rs
examples/: .gitignore  Cargo.toml  memory.x
examples/.cargo/: config.toml
examples/crates/: README.md
examples/crates/attitude/: Cargo.toml
examples/crates/attitude/src/: lib.rs  tests.rs
examples/crates/control/: Cargo.toml
examples/crates/control/src/: lib.rs
examples/crates/imu/: Cargo.toml
examples/crates/imu/src/: lib.rs  tests.rs
firmware/: Cargo.toml  build.rs  memory-f103.x  memory-f130.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
harness/: pyproject.toml
harness/build_assets/gd-spl/gd32f10x/: link.ld  startup.S
harness/build_assets/gd-spl/gd32f10x/cmsis-stubs/: gd32f10x_libopt.h
harness/build_assets/gd-spl/gd32f1x0/: link.ld  startup.S
harness/build_assets/gd-spl/gd32f1x0/cmsis-stubs/: core_cmFunc.h  core_cmInstr.h  gd32f1x0_libopt.h
harness/build_assets/runtime-hal/: link.ld  startup.S
harness/golden/gd-spl/local/gd32f10x/: adc_bringup_adc0_vrefint_f10x.BUILD.txt  adc_bringup_adc0_vrefint_f10x.trace  adc_dual_adc_simultaneous_f10x.BUILD.txt  adc_dual_adc_simultaneous_f10x.trace  adc_inject_bringup_adc0_f10x.BUILD.txt  adc_inject_bringup_adc0_f10x.trace  clock_enable_adc0_f10x.BUILD.txt  clock_enable_adc0_f10x.trace  clock_enable_i2c0_gpiob_f10x.BUILD.txt  clock_enable_i2c0_gpiob_f10x.trace  clock_enable_spi0_gpioa_f10x.BUILD.txt  clock_enable_spi0_gpioa_f10x.trace  clock_enable_timer0_f10x.BUILD.txt  clock_enable_timer0_f10x.trace  clock_enable_usart1_gpioa_f10x.BUILD.txt  clock_enable_usart1_gpioa_f10x.trace  clock_tree_72m_irc8m_f10x.BUILD.txt  clock_tree_72m_irc8m_f10x.trace  gpio_af_i2c0_scl_sda_f10x.BUILD.txt  gpio_af_i2c0_scl_sda_f10x.trace  gpio_af_spi0_pins_f10x.BUILD.txt  gpio_af_spi0_pins_f10x.trace  gpio_af_timer0_gates_f10x.BUILD.txt  gpio_af_timer0_gates_f10x.trace  gpio_af_usart1_rx_pa3_f10x.BUILD.txt  gpio_af_usart1_rx_pa3_f10x.trace  gpio_af_usart1_tx_pa2_f10x.BUILD.txt  gpio_af_usart1_tx_pa2_f10x.trace  gpio_route_general_pwm_pin_pb3_f10x.BUILD.txt  gpio_route_general_pwm_pin_pb3_f10x.trace  i2c_bringup_i2c0_100k_f10x.BUILD.txt  i2c_bringup_i2c0_100k_f10x.trace  spi_bringup_spi0_1m_mode0_f10x.BUILD.txt  spi_bringup_spi0_1m_mode0_f10x.trace  timer_pwm_bringup_timer0_f10x.BUILD.txt  timer_pwm_bringup_timer0_f10x.trace  timer_pwm_setduties_timer0_f10x.BUILD.txt  timer_pwm_setduties_timer0_f10x.trace  timer_set_channel_outputs_timer0_f10x.BUILD.txt  timer_set_channel_outputs_timer0_f10x.trace  (+6 more)
harness/golden/gd-spl/local/gd32f1x0/: adc_bringup_adc0_vrefint_f1x0.BUILD.txt  (+41 more)
harness/regcmp/: __init__.py  build_rusthal.py  build_spl.py  cli.py  engine.py  extractor.py  paths.py  runner.py  selftest.py  targets.py  vectors.py
harness/snippet-crate/: Cargo.toml
harness/snippet-crate/.cargo/: config.toml
harness/snippet-crate/src/: lib.rs  snippet_body.rs
harness/tests/: test_adc.py  test_build_rusthal.py  test_build_spl.py  test_dr_t4.py  test_engine.py  test_extractor.py  test_golden.py  test_i2c.py  test_matrix.py  test_polling.py  test_selftest.py  test_spi.py  test_targets.py  test_timer.py  test_vectors.py
harness/vectors/adc/: bringup_adc0_vrefint_f10x.yaml  bringup_adc0_vrefint_f1x0.yaml  calibrate_adc0_f10x.yaml  calibrate_adc0_f1x0.yaml  dual_adc_simultaneous_f10x.yaml  inject_bringup_adc0_f10x.yaml  inject_bringup_adc0_f1x0.yaml  inject_read_adc0_f10x.yaml  inject_read_adc0_f1x0.yaml  transfer_vrefint_f10x.yaml  transfer_vrefint_f1x0.yaml
harness/vectors/clock/: enable_adc0_f10x.yaml  enable_adc0_f1x0.yaml  enable_i2c0_gpiob_f10x.yaml  enable_i2c0_gpiob_f1x0.yaml  enable_spi0_gpioa_f10x.yaml  enable_spi0_gpioa_f1x0.yaml  enable_timer0_f10x.yaml  enable_timer0_f1x0.yaml  enable_usart1_gpioa_f10x.yaml  enable_usart1_gpioa_f1x0.yaml  tree_72m_irc8m_f10x.yaml  tree_72m_irc8m_f1x0.yaml  tree_polling_72m_f10x.yaml  tree_polling_72m_f1x0.yaml
harness/vectors/gpio/: af_i2c0_scl_sda_f10x.yaml  af_i2c0_scl_sda_f1x0.yaml  af_spi0_pins_f10x.yaml  af_spi0_pins_f1x0.yaml  af_timer0_gates_f10x.yaml  af_timer0_gates_f1x0.yaml  af_usart1_rx_pa3_f10x.yaml  af_usart1_rx_pa3_f1x0.yaml  af_usart1_tx_pa2_f10x.yaml  af_usart1_tx_pa2_f1x0.yaml  route_general_pwm_pin_pb3_f10x.yaml  route_general_pwm_pin_pb3_f1x0.yaml
harness/vectors/i2c/: bringup_i2c0_100k_f10x.yaml  bringup_i2c0_100k_f1x0.yaml  transfer_whoami_f10x.yaml  transfer_whoami_f1x0.yaml
harness/vectors/spi/: bringup_spi0_1m_mode0_f10x.yaml  bringup_spi0_1m_mode0_f1x0.yaml  transfer_loopback_f10x.yaml  transfer_loopback_f1x0.yaml
harness/vectors/timer/: pwm_bringup_timer0_f10x.yaml  pwm_bringup_timer0_f1x0.yaml  pwm_setduties_timer0_f10x.yaml  pwm_setduties_timer0_f1x0.yaml  set_channel_outputs_timer0_f10x.yaml  set_channel_outputs_timer0_f1x0.yaml  trgo_trigger_timer0_f10x.yaml  trgo_trigger_timer0_f1x0.yaml
harness/vectors/usart/: bringup_usart1_115200_8n1_f10x.yaml  bringup_usart1_115200_8n1_f1x0.yaml  bringup_usart2_115200_8n1_f10x.yaml  write_byte_usart1_f1x0.yaml
(+75 files in other folders)
