[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "regcmp"
version = "0.1.0"
description = "In-repo golden-comparison harness for runtime-hal: trace runtime-hal MMIO under Unicorn and diff against the GD SPL golden. No dependency on any external trace tool."
requires-python = ">=3.9"
dependencies = [
    "unicorn>=2.0,<3",
    "capstone>=5.0,<6",
    "pyelftools>=0.30",
    "pyyaml>=6.0",
    # tomllib is stdlib from 3.11; tomli backports it for 3.9/3.10.
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
regcmp = "regcmp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["regcmp*"]
