[package]
name = "bench-fw-coldpath"
version = "0.1.0"
edition = "2021"
publish = false
description = "On-silicon cold-path bring-up validator: drives the GD32F130 cold-path peripherals (72 MHz IRC8M->PLL clock, I2C0/IMU, ADC0 VREFINT+temp, SPI0 loopback) entirely through runtime-hal from the runtime-detected chip, and publishes the results in a fixed RAM struct readable over SWD."

[dependencies]
# runtime-hal in its normal (real volatile MMIO, no_std) build: NOT the `mock` feature.
runtime-hal = { path = "../..", default-features = false }
embedded-hal = "1.0"
# AdcConfig's channel list is a bounded heapless Vec, constructed in code (DR-T5).
heapless = "0.8"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

[[bin]]
name = "bench-fw-coldpath"
path = "src/main.rs"

# Size-optimised, debuggable release image for flashing.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true
overflow-checks = false
