[package]
name = "bench-fw-usart-rx"
version = "0.1.0"
edition = "2021"
publish = false
description = "On-silicon S0 validator for the multi-instance USART RX spec: a SINGLE F103 bluepill with an intra-board cross-wire (PA2->PB11, PB10->PA3), driving the existing polled Usart path on both USART1 (PA2/PA3) and the module USART (Usart2 = ST USART3, PB10/PB11) at 115200 8N1. Loops a known frame each direction, pulses PB9 on a full pass, and publishes a fixed RAM result block readable over SWD. ZERO new library code."

[dependencies]
# runtime-hal in its normal (real volatile MMIO, no_std) build: NOT the `mock` feature.
runtime-hal = { path = "../..", default-features = false }
embedded-hal = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

[[bin]]
name = "bench-fw-usart-rx"
path = "src/main.rs"

# Size-optimised, debuggable release image for flashing.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true
overflow-checks = false
